--- a/src/app/(MainCompoments)/Purchase/purchase.css
+++ b/src/app/(MainCompoments)/Purchase/purchase.css
@@ -32,6 +32,9 @@
   font-size: 10px !important;
   background-color: #f9f9f9 !important;
 }
+.Purchasedateils .purchasepachagewidth {
+  width: 230px !important;
+}
 .Purchasedateils .purchasepachagesum {
   font-size: 12px !important;
   font-weight: 400 !important;
@@ -44,6 +47,55 @@
   background-color: #336279;
   color: #fff;
 }
-.Purchasedateils .boldall{
+.Purchasedateils .boldall {
   font-weight: 600 !important;
+}
+.Purchasedateils .disacount {
+  font-size: 12px !important;
+  font-weight: 400 !important;
+}
+.Purchasedateils .disacount {
+  font-size: 12px !important;
+  font-weight: 400 !important;
+}
+.Purchasedateils .disacount.p1 {
+  color: #626e7b;
+}
+.Purchasedateils .disacount.p2 {
+  color: #b6bcc3;
+}
+.discount-container {
+  background-color: #f9f9f9; /* اللون الرمادي */
+  border-radius: 8px; /* زوايا مستديرة */
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%; /* العرض الكامل */
+  max-width: 400px; /* عرض أقصى */
+  margin: 10px auto; /* توسيط */
+}
+
+.discount-input {
+  border: none; /* إزالة الحدود */
+  background-color: #fff; /* لون الخلفية الأبيض */
+  border-radius: 8px; /* زوايا مستديرة */
+  padding: 10px; /* مسافات داخلية */
+  margin-left: 10px; /* مسافة بين الزر والحقل */
+  width: 200px; /* عرض أصغر */
+}
+.discount-input::placeholder{
+  font-size: 10px !important;
+  font-weight: 300;
+  color: #B6BCC3;
+  text-align: center;
+}
+
+.apply-btn {
+  border-radius: 5px; /* زوايا مستديرة */
+  padding: 10px 35px !important; /* مسافات داخلية للزر */
+  font-size: 10px; /* حجم النص */
+  background-color: #336279;
+  color: #ffffff;
+  font-weight: 600;
+  border: none;
 }
