--- a/src/app/(MainCompoments)/Countries/country.css
+++ b/src/app/(MainCompoments)/Countries/country.css
@@ -21,7 +21,7 @@
   transition: background-color 0.3s ease, color 0.3s ease;
 }
 
-.country-list .country-list-links:hover {
+.country-list .country-list-links:active {
   background-color: #f9f9f9;
   color: #336279 !important;
 }
