--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,43 +1,39 @@
 :root {
   --background: #ffffff;
   --foreground: #171717;
+  --primary-color:  #336279; /* اللون الرئيسي */
+  --secondary-color:#575050; /* اللون الفرعي */
 }
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
 html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
 }
-
 body {
   color: var(--foreground);
   background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   direction: rtl;
 }
-
 * {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
 }
-
 a {
   color: inherit;
   text-decoration: none;
 }
 .active {
-  color: #336279 !important;
-    font-weight: 500 !important;
+color: var(--primary-color) !important;
+  font-weight: 500 !important;
+}
+@media (prefers-color-scheme: dark) {
+  :root {
+    --background: #0a0a0a;
+    --foreground: #ededed;
+  }
 }
 
 @media (prefers-color-scheme: dark) {
