--- a/src/app/_Compontents/Header/header.css
+++ b/src/app/_Compontents/Header/header.css
@@ -53,7 +53,7 @@
   content: "";
   width: 100%;
   height: 20px;
-  background-color: #2a5b74;
+  background-color: var(--primary-color);
   position: absolute;
   bottom: 0;
   left: 50%;
