--- a/src/app/(auth)/Login/login.css
+++ b/src/app/(auth)/Login/login.css
@@ -31,13 +31,13 @@
   font-size: 12px !important;
 }
 .login .loginpass{
-  color: #4B87A4;
+  color: var(--primary-color);
   font-size: 12px !important;
   font-weight: 400 !important;
-  border-bottom: 1px solid #4B87A4;
+  border-bottom: 1px solid var(--primary-color);
 }
 .login button.follow {
-  background-color: #4b87a4 !important;
+  background-color: var(--primary-color) !important;
   padding: 10px 100px; /* Adjust button padding */
   color: #f1f3f6;
   font-size: 13px;
