--- a/src/app/(auth)/ForgetPassword/ResetPass/resetpass.css
+++ b/src/app/(auth)/ForgetPassword/ResetPass/resetpass.css
@@ -19,14 +19,14 @@
   font-size: 12px !important;
 }
 .resetPassword .btnsendback {
-  color: #4b87a4 !important;
+  color: var(--primary-color) !important;
   border: none !important;
   background-color: transparent;
   font-size: 12px !important;
   font-weight: 600 !important;
 }
 .resetPassword button.follow {
-  background-color: #4b87a4 !important;
+  background-color: var(--primary-color) !important;
   padding: 10px 100px; /* Adjust button padding */
   color: #f1f3f6;
   font-size: 13px !important;
@@ -35,10 +35,10 @@
   border: none;
 }
 .resetPassword button.back {
-  background-color: #626e7b !important;
+  background-color: var(--auth-color) !important;
 }
 .resetPassword .p_registerOtp p {
-  color: #626e7b !important;
+  color: var(--auth-color) !important;
   font-size: 12px !important;
   font-weight: 400 !important;
 }
