--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,9 +1,9 @@
 :root {
   --background: #ffffff;
   --foreground: #171717;
-  --primary-color:  #336279; /* اللون الرئيسي */
-  --secondary-color:#575050; /* اللون الفرعي */
-  --auth-color:#626e7b; /* اللون الفرعي */
+  --primary-color: #336279; /* اللون الرئيسي */
+  --secondary-color: #575050; /* اللون الفرعي */
+  --auth-color: #626e7b; /* اللون الفرعي */
 }
 html,
 body {
@@ -27,9 +27,28 @@ a {
   text-decoration: none;
 }
 .active {
-color: var(--primary-color) !important;
+  color: var(--primary-color) !important;
   font-weight: 500 !important;
 }
+.small-swal-logout {
+  margin-top: 20px !important;
+  width: 400px !important; /* تقليل العرض */
+  height: 220px !important; /* ضبط الارتفاع تلقائياً */
+  font-size: 10px !important; /* تصغير الخط */
+}
+.small-title-logout {
+  font-size: 12px !important; /* تصغير حجم الخط */
+  font-weight: normal !important; /* تقليل سمك الخط إذا كان سميكًا */
+}
+.custom-confirm-button-logout {
+  background-color: var(--primary-color) !important; /* تغيير لون الخلفية */
+  color: white !important; /* تغيير لون النص */
+  font-size: 14px !important; /* تصغير الخط */
+  padding: 8px 20px !important; /* تعديل الحجم */
+  border-radius: 8px !important; /* تعديل الحواف */
+  border: none !important; /* إزالة الحدود */
+}
+
 @media (prefers-color-scheme: dark) {
   :root {
     --background: #0a0a0a;
