--- a/src/app/(MainCompoments)/continents/continents.css
+++ b/src/app/(MainCompoments)/continents/continents.css
@@ -2,7 +2,6 @@
   background-color: #f9f9f9;
   padding: 20px 0;
 }
-
 .countryheader .country-list {
   position: absolute;
   left: 50%;
@@ -10,7 +9,7 @@
   transform: translateX(-50%);
   z-index: 2;
 }
-.country-list .country-list-links.active {
+.country-list .active1 {
   background-color: white !important;
   color: #336279 !important; /* لون أخضر عند التفعيل */
 }
@@ -23,12 +22,6 @@
   font-weight: 500;
   transition: background-color 0.3s ease, color 0.3s ease;
 }
-
-/* .country-list .country-list-links:hover {
-  background-color: #f9f9f9;
-  color: #336279 !important;
-} */
-
 .countryshow {
   background-color: #575050;
   padding: 15px 100px !important;
@@ -38,24 +31,36 @@
   color: #ffffff;
   transition: background-color 0.3s ease;
 }
-
 .countryshow:hover {
   background-color: #285060;
 }
-
 .countryname {
   color: #626e7b;
   font-size: 20px;
   font-weight: 300;
 }
-
 /* الشاشات الكبيرة */
 @media (min-width: 992px) {
   .countryname {
     font-size: 18px;
   }
 }
+@media (min-width: 767px) and (max-width: 1200px) {
+  .countryheader .row {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
 
+  .countryheader .col-md-3 {
+    flex: 0 0 50%; /* عرض العنصر يكون 50% من عرض الحاوية */
+    max-width: 50%;
+  }
+
+  .countryheader .col-md-3.text-center {
+    text-align: center;
+  }
+}
 /* التابلت */
 @media (max-width: 991px) and (min-width: 768px) {
   .countryname {
@@ -70,16 +75,16 @@
 
 /* الموبايل */
 @media (max-width: 767px) {
-  .countryheader {
+  .countryheader .countryheader {
     padding: 15px;
   }
 
-  .country-list {
+  .countryheader .country-listbegin {
     top: -40px;
   }
 
   .country-list .country-list-links {
-    padding: 10px 20px;
+    padding: 14px 25px;
     font-size: 12px;
     margin: 5px 10px;
   }
@@ -89,9 +94,10 @@
     padding: 8px 15px;
   }
 
-  .countryname {
+  .countryheader .countryname {
     font-size: 14px;
     margin-left: 10px;
+    margin-right: 8px !important;
   }
 }
 
@@ -114,21 +120,5 @@
   .country-flag img {
     width: 50px;
     height: 30px;
-  }
-}
-@media (min-width: 767px) and (max-width: 1200px) {
-  .countryheader .row {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-  }
-
-  .countryheader .col-md-3 {
-    flex: 0 0 50%; /* عرض العنصر يكون 50% من عرض الحاوية */
-    max-width: 50%;
-  }
-
-  .countryheader .col-md-3.text-center {
-    text-align: center;
   }
 }
