--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -60,10 +60,10 @@ a {
 }
 .country-listbeginall .country-list-links {
   cursor: pointer;
-  border-radius: 5px;
-  padding: 15px 80px;
-  margin: 0 20px;
-  font-size: var(--font-medium);
+  border-radius: 5px !important;
+  padding: 15px 80px !important;
+  margin: 0 20px !important;
+  font-size: var(--font-medium) !important;
   font-weight: 500 !important;
   transition: background-color 0.3s ease, color 0.3s ease !important;
 }
@@ -85,26 +85,26 @@ a {
   }
 }
 @media (min-width: 768px) and (max-width: 991px) {
-  .countryheader .country-listbeginall .country-list-links {
-    padding: 12px 40px;
-    font-size: 14px;
+  .country-listbeginall .country-list-links {
+    padding: 12px 40px !important;
+    font-size: var(--font-small);
   }
 }
 @media (max-width: 767px) {
-  .countryheader .country-listbeginall {
-    top: -40px;
+  .country-listbeginall {
+    top: -40px !important;
   }
 
-  .countryheader .country-listbeginall .country-list-links {
-    padding: 8px 20px;
+  .country-listbeginall .country-list-links {
+    padding: 8px 20px !important;
     font-size: 15px !important;
-    margin: 5px 10px;
+    margin: 5px 10px !important;
   }
 }
 
 @media (max-width: 350px) {
-  .countryheader .country-listbeginall .country-list-links {
-    padding: 8px 15px;
-    font-size: 12px;
+  .country-listbeginall .country-list-links {
+    padding: 8px 15px !important;
+    font-size: 12px !important;
   }
 }
