--- a/src/app/_Compontents/AuthLinks/authlinks.css
+++ b/src/app/_Compontents/AuthLinks/authlinks.css
@@ -1,9 +1,9 @@
 .authlinks .authlinkspara {
-    font-size: 13px !important;
-    font-weight: 300 !important;
-    color: #B6BCC3 !important;
+  font-size: var(--font-small) !important;
+  font-weight: 300 !important;
+  color: #b6bcc3 !important;
 }
 .authlinks .authlinksicon {
-    width: 46px !important;
-    height: 46px !important;
+  width: 46px !important;
+  height: 46px !important;
 }
