--- a/src/app/_Compontents/Header/header.css
+++ b/src/app/_Compontents/Header/header.css
@@ -8,8 +8,9 @@
   font-weight: 700 !important;
 }
 .content-center p {
-  font-size: 20px !important ;
+  font-size: var(--font-large) !important ;
   font-weight: 300 !important;
+  margin-bottom: 30px !important;
 }
 
 .search-bar {
