--- a/src/app/_Compontents/Phoneuse/phoneuse.css
+++ b/src/app/_Compontents/Phoneuse/phoneuse.css
@@ -6,16 +6,16 @@
 }
 
 .phone .headphone {
-  font-size: 24px;
-  font-weight: 700;
-  color: #626e7b;
+  font-size: 24px !important;
+  font-weight: 700 !important;
+  color: var(--auth-color);
   margin-bottom: 10px; /* إضافة مسافة بين العناصر */
 }
 
 .phone .phoneusepra {
-  font-size: 18px;
-  font-weight: 700;
-  color: #626e7b;
+  font-size: 18px !important;
+  font-weight: 700 !important;
+  color: var(--auth-color);
   line-height: 1.5; /* لتحسين قراءة النص */
 }
 
