--- a/src/app/_Compontents/Navbar/navbar.css
+++ b/src/app/_Compontents/Navbar/navbar.css
@@ -51,10 +51,51 @@ li a.nav-link {
 .nav-item.dropdown.show .nav-link .fa-chevron-down {
   transform: rotate(180deg);
 }
+.navbar-toggler.toggler-mobile:focus {
+  box-shadow: 0 0 0 0 transparent !important;
+  outline: none !important;
+}
 
 @media (max-width: 992px) {
   .offcanvas {
     width: 260px !important;
+  }
+  .offcanvas-header {
+    margin-top: 10px !important;
+    margin-right: auto !important;
+  }
+  .offcanvas-header .btn-close {
+    border: none !important;
+  }
+  .offcanvas-header .btn-close:focus {
+    border: none !important;
+    outline: none !important;
+    box-shadow:  0 0 0 0  transparent !important;
+  }
+  .offcanvas .nav-item a,
+  .nav-item button {
+    color: black !important;
+    font-size: 16px !important;
+    font-weight: 500 !important;
+  }
+  .nav-item .iconoffcen {
+    color: black !important;
+    font-size: 16px !important;
+  }
+  .offcanvas .nav-item a:hover,
+  .nav-item button:hover {
+    color: var(--primary-color) !important;
+  }
+  .offcanvas .nav-item .dropdown-item span {
+    font-size: 12px !important;
+    color: var(--secondary-color) !important;
+  }
+  .offcanvas .nav-item a.resgister{
+    color: black !important;
+    padding: 7px 40px !important;
+  }
+  .offcanvas .nav-item a.resgister:hover{
+    color: black !important;
   }
 
   .navbar-nav {
@@ -92,16 +133,6 @@ li a.nav-link {
   .resgister {
     font-size: 14px !important;
     padding: 6px 20px !important;
-  }
-
-  .offcanvas .nav-item a,
-  .nav-item button,
-  .nav-item .iconoffcen {
-    color: black !important;
-  }
-
-  .offcanvas .nav-item a {
-    font-size: 17px !important;
   }
 
   .offcanvas .nav-item a:active {
