--- a/src/app/(auth)/Register/register.css
+++ b/src/app/(auth)/Register/register.css
@@ -39,7 +39,7 @@
   border: none;
 }
 .registertajwal .p_register p {
-  color: #626e7b !important;
+  color: var(--auth-color) !important;
   font-size: 12px !important;
   font-weight: 400 !important;
 }
